--- a/src/style/elements/base.css
+++ b/src/style/elements/base.css
@@ -1,3 +1,6 @@
 body{
     background-color: var(--color-pomp-and-power);
+    max-width: 360px;
+    margin-left: auto;
+    margin-right: auto;
 }
