--- a/src/style/elements/base.css
+++ b/src/style/elements/base.css
@@ -1,6 +1,13 @@
+html,
+body{
+    font-size: 10px;
+    height: 100%;
+}
+
 body{
     background-color: var(--color-pomp-and-power);
     max-width: 360px;
     margin-left: auto;
     margin-right: auto;
+    font-family: 'Press Start 2P', cursive;
 }
