--- a/src/style/settings/collors.css
+++ b/src/style/settings/collors.css
@@ -3,4 +3,5 @@
     --color-pomp-and-power: #7C5E99;
     --color-floral-wihte: #FFFCEE;
     --color-fiery-rose: #F25A70;
+    --color-sand-storm: #F5D547;
 }
