--- a/src/style/settings/collors.css
+++ b/src/style/settings/collors.css
@@ -4,4 +4,6 @@
     --color-floral-wihte: #FFFCEE;
     --color-fiery-rose: #F25A70;
     --color-sand-storm: #F5D547;
+    --color-old-silver: #828282;
+    --color-mantis: #62C370;
 }
